// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Neutral notification banner Snapshot 1`] = `
<div
  aria-labelledby="govuk-notification-banner-title"
  className="govuk-notification-banner"
  data-module="govuk-notification-banner"
  role="region"
>
  <div
    className="govuk-notification-banner__header"
  >
    <h2
      className="govuk-notification-banner__title"
      id="govuk-notification-banner-title"
    >
      Important
    </h2>
  </div>
  <div
    className="govuk-notification-banner__content"
  >
    <h3
      className="govuk-notification-banner__heading"
    >
      Training outcome recorded and trainee withdrawn
    </h3>
    <p
      className="govuk-body"
    >
      Contact 
      <a
        className="govuk-notification-banner__link"
        href="#"
      >
        example@department.gov.uk
      </a>
       if you think there’s a problem.
    </p>
  </div>
</div>
`;

exports[`Success notification banner Snapshot 1`] = `
<div
  aria-labelledby="govuk-notification-banner-title"
  className="govuk-notification-banner govuk-notification-banner--success"
  data-module="govuk-notification-banner"
  role="alert"
>
  <div
    className="govuk-notification-banner__header"
  >
    <h2
      className="govuk-notification-banner__title"
      id="govuk-notification-banner-title"
    >
      Important
    </h2>
  </div>
  <div
    className="govuk-notification-banner__content"
  >
    <h3
      className="govuk-notification-banner__heading"
    >
      Training outcome recorded and trainee withdrawn
    </h3>
    <p
      className="govuk-body"
    >
      Contact 
      <a
        className="govuk-notification-banner__link"
        href="#"
      >
        example@department.gov.uk
      </a>
       if you think there’s a problem.
    </p>
  </div>
</div>
`;
